--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -245,9 +245,9 @@
             if (event.detail.xhr.status === 200 && form.id === 'login-form') {
                 try {
                     const response = JSON.parse(event.detail.xhr.responseText);
-                    if (response.token) {
+                    if (response.access_token) {
                         // Store token and redirect to dashboard
-                        localStorage.setItem('token', response.token);
+                        localStorage.setItem('token', response.access_token);
                         localStorage.setItem('refreshToken', response.refresh_token);
                         window.location.href = '/dashboard';
                     }
