add supabase updates

--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -132,11 +132,9 @@
             </div>
         </div>
     </div>
-    <script src="/static/js/helloworld.js"></script>
-    <script src="/static/js/token.js"></script>
-    <script>
+    <script src="/static/js/token.js"></script> <script>
         // Initialize
-        checkAuthWithValidation();
+        apiFetch("/dashboard");
     </script>
 </body>
 </html>
